# llaminate

./: pyproject.toml
.github/: TODO.md
llaminate/: layers.py  model.py  pipeline.py  pretrain.py  utils.py
notebooks/: llaminate.student.pretrain.ipynb  pretrain.ipynb
scripts/: pretrain.py
tests/: test_layers.py  test_model.py  test_pipeline.py
