[tool.poetry]
name = "llaminate"
version = "0.0.1"
description = "Optimized version of llama3."
authors = ["apehex <apehex@protonmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
tensorflow = ">=2.14"
tensorflow-datasets = ">=4.9"
mlable = {path = "../mlable/", develop = true}
tokun = {path = "../tokun/", develop = true}
# mlable = ">=0.1.3"
# tokun = ">=0.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
